--- a/index.html
+++ b/index.html
@@ -9,46 +9,51 @@
 	<p>
 		<label>Insira o códgo fonte em PHP para ser analisado e rotulado!</label>
 	</p>
+
+	<form method="post" action="main.php">
 		<p>
 			<textarea name="codigo_fonte" id="codigo_fonte" rows="25" cols="100" autofocus="" required=""></textarea>
 		</p>
 
 		<p>
-			<button id="rotular">Rotular código...</button>
-			<button id="novo_rot">Nova verificação</button>
+			<input type="submit" id="rotular" value="Rotular código..." >
+			<!-- <button id="novo_rot">Nova verificação</button> -->
 		</p>
+	</form>
 
 	<div id="rotulado"></div>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript">
-	$(document).ready(function() {
+	// $(document).ready(function() {
 
-		$('#novo_rot').attr("disabled", true);
+		// $('#novo_rot').attr("disabled", true);
 
-		$('#rotular').click(function() {
-			$.ajax({
-				type 		: 'post',
-				url			: 'main.php',
-				data 		: 'codigo_fonte='+ $('#codigo_fonte').val(),
-				dataType	: 'html',
-				success : function(response){
-					$('#rotulado').prepend(response);
-					$('#rotular').attr("disabled", true);
-					$('#novo_rot').attr("disabled", false);
-				}
-			});
-		});
+		// $('#rotular').click(function() {
 
-		$('#novo_rot').click(function() {
-			$('#codigo_fonte').val('');
-			$('#codigo_fonte').focus();
-			$('#rotulado').empty();
-			$('#rotular').attr("disabled", false);
-			$('#novo_rot').attr("disabled", true);
-		});	
+		// 	alert($('#codigo_fonte').val());
 
-	});
+		// 	$.ajax({
+		// 		type 		: 'post',
+		// 		url			: 'main.php',
+		// 		data 		: 'codigo_fonte='+ $('#codigo_fonte').val(),
+		// 		success : function(response){
+		// 			$('#rotulado').prepend(response);
+		// 			$('#rotular').attr("disabled", true);
+		// 			$('#novo_rot').attr("disabled", false);
+		// 		}
+		// 	});
+		// });
+
+	// 	$('#novo_rot').click(function() {
+	// 		$('#codigo_fonte').val('');
+	// 		$('#codigo_fonte').focus();
+	// 		$('#rotulado').empty();
+	// 		$('#rotular').attr("disabled", false);
+	// 		$('#novo_rot').attr("disabled", true);
+	// 	});	
+
+	// });
 </script>
 
 </body>
